Align build toolchain with reader-pro 3.2.14
* Align build toolchain with target JAR

* Run target toolchain in CI